# minreq

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: dev-builds.yml  lint.yml  msrv.yml  unit-tests.yml
examples/: download.rs  get.rs  hello.rs  iterator.rs  json.rs  post.rs
src/: connection.rs  error.rs  http.rs  http_url.rs  lib.rs  native_tls.rs  proxy.rs  request.rs  requests.rs  response.rs
src/connection/: http_connection.rs  https_connection.rs  mod.rs  native_tls_stream.rs  openssl_stream.rs  rustls_stream.rs
src/native_tls/: mod.rs  openssl.rs
src/tests/: mod.rs  setup.rs
tests/: main.rs  setup.rs
