[package]
name = "minreq"
version = "3.0.0-alpha"
authors = ["Jens Pitkanen <jens@neon.moe>"]
description = "Simple, minimal-dependency HTTP client"
documentation = "https://docs.rs/minreq"
homepage = "https://github.com/neonmoe/minreq"
repository = "https://github.com/neonmoe/minreq"
readme = "README.md"
keywords = ["http", "https", "client", "request", "json"]
categories = ["web-programming::http-client"]
license = "ISC"
edition = "2021"
rust-version = "1.63"

[badges]
travis-ci = { repository = "neonmoe/minreq" }
maintenance = { status = "passively-maintained" }

[dependencies]
# For the urlencoding feature:
urlencoding = { version = "2.1.0", optional = true }
# For the punycode feature:
punycode = { version = "0.4.1", optional = true }
# For the json-using-serde feature:
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.0", optional = true }
# For the proxy feature:
base64 = { version = "0.22", optional = true }
# For the https features:
rustls = { version = "0.23.35", optional = true }
rustls-platform-verifier = { version = "0.6.2", optional = true }
webpki-roots = { version = "1.0.4", optional = true }
rustls-webpki = { version = "0.103.8", optional = true }
openssl = { version = "0.10.29", optional = true }
log = { version = "0.4.0", optional = true }
openssl-probe = { version = "0.1", optional = true }
native-tls = { version = "0.2", optional = true }

[dev-dependencies.tiny_http]
# tiny_http is used for the integration tests under the `tests` directory.
git = "https://github.com/tiny-http/tiny-http"
# `log` is not optional in the latest version of tiny_http, but is at this commit.
# If a version of tiny_http with that change gets released, prefer that.
# We don't want `log` as a dependency of our tests, because its latest version's MSRV is 1.68.
rev = "33b0f26bb9bc7fd17a0ab2a71cf57f08f1ece74b"
default-features = false

[package.metadata.docs.rs]
features = ["json-using-serde", "proxy", "https", "punycode"]

[features]
https = ["https-rustls"]
https-rustls = ["rustls", "webpki-roots", "rustls-webpki"]
https-rustls-probe = ["rustls", "rustls-platform-verifier"]
https-openssl = ["openssl/vendored"]
https-openssl-probe = ["https-openssl", "openssl-probe"]
https-native-tls = ["native-tls"]
json-using-serde = ["serde", "serde_json"]
proxy = ["base64"]
urlencoding = ["dep:urlencoding"]
punycode = ["dep:punycode"]

[[example]]
name = "hello"

[[example]]
name = "iterator"

[[example]]
name = "json"
required-features = ["json-using-serde"]

# vim: ft=conf
